Intermittent Assertion failure: needsIncrementalBarrier_, at /builds/worker/workspace/obj-build/dist/include/js/shadow/Zone.h:52
Categories
(Core :: JavaScript: GC, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox86 | --- | unaffected |
| firefox87 | --- | unaffected |
| firefox88 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: jonco)
References
(Regression)
Details
(Keywords: assertion, intermittent-failure, regression)
Attachments
(1 file)
Filed by: btara [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=331802655&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/JVJWjIouSuSI2cnni-Bb0g/runs/0/artifacts/public/logs/live_backing.log
Reftest URL: https://hg.mozilla.org/mozilla-central/raw-file/tip/layout/tools/reftest/reftest-analyzer.xhtml#logurl=https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/JVJWjIouSuSI2cnni-Bb0g/runs/0/artifacts/public/logs/live_backing.log&only_show_unexpected=1
[task 2021-03-02T20:59:16.790Z] 20:59:16 INFO - TEST-START | /css/mediaqueries/aspect-ratio-004.html
[task 2021-03-02T20:59:16.793Z] 20:59:16 INFO - PID 1278 | 1614718756791 Marionette INFO Testing http://web-platform.test:8000/css/mediaqueries/aspect-ratio-004.html == http://web-platform.test:8000/css/reference/ref-filled-green-100px-square.xht
[task 2021-03-02T20:59:16.857Z] 20:59:16 INFO - PID 1258 | Assertion failure: needsIncrementalBarrier_, at /builds/worker/workspace/obj-build/dist/include/js/shadow/Zone.h:52
[task 2021-03-02T20:59:16.895Z] 20:59:16 INFO - PID 1278 | 1614718756894 Marionette INFO No differences allowed
[task 2021-03-02T20:59:16.924Z] 20:59:16 INFO - TEST-PASS | /css/mediaqueries/aspect-ratio-004.html | took 135ms```
| Assignee | ||
Updated•4 years ago
|
Updated•4 years ago
|
Comment 1•4 years ago
|
||
Set release status flags based on info from the regressing bug 1694209
| Assignee | ||
Comment 2•4 years ago
|
||
This is asserting because we're trying to get the barrier tracer for a zone that doesn't have barriers enabled, but is in the GC marking state. The reason is that barriers have been disabled because for sweeping, while we are also marking in zones that haven't started sweeping yet. This is fine. I rearranged the code so it skips the assertion.
| Comment hidden (Intermittent Failures Robot) |
Comment 5•4 years ago
|
||
| bugherder | ||
Description
•